# test_compiler

./: .gitignore  CMakeLists.txt  README.md  flake.nix  m.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
lang-tests/: basic.ll
src/: lexer.l  lexer.tab.h  main.c
src/compiler/: CMakeLists.txt  compiler.cpp  compiler.h
src/conan/: CMakeLists.txt
src/parser/: CMakeLists.txt  ast.c  ast.h  lexer.l  lexer.tab.h  parser.y
src/tests/: CMakeLists.txt  lexer_test.cc  parser_tests.cc
